[gd_scene load_steps=2 format=3 uid="uid://dhjnqv0d0bwh8"]

[ext_resource type="Script" path="res://scenes/rgb.gd" id="1_l5vpd"]

[node name="RGB" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5vpd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50
alignment = 1

[node name="EnableRed" type="CheckBox" parent="VBoxContainer/VBox"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Red"

[node name="EnableGreen" type="CheckBox" parent="VBoxContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Green"

[node name="EnableBlue" type="CheckBox" parent="VBoxContainer/VBox"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Blue"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[connection signal="toggled" from="VBoxContainer/VBox/EnableRed" to="." method="_on_enable_red_toggled"]
[connection signal="toggled" from="VBoxContainer/VBox/EnableGreen" to="." method="_on_enable_green_toggled"]
[connection signal="toggled" from="VBoxContainer/VBox/EnableBlue" to="." method="_on_enable_blue_toggled"]
